--- a/index.html
+++ b/index.html
@@ -9,19 +9,18 @@
 <body>
     <div class="container">
         <h1>Cifrul lui cesar</h1>
-        <label for="text-intrare">
-            Introdu text
-        </label>
-        <input type="text" name="text-intrare" id="text-intrare">
+        <label for="input-text">Introdu text</label>
+<input type="text" name="text-intrare" id="input-text">
 
-        <label for="cheie-criptare">
-            <p>Introdu cheia de criptare</p>
-        </label>
-        <input type="number" name="cheie-criptare" id="cheie-criptare">
-    <button onclick="cripteaza()">Cipteaza</button>
+<label for="cheie-criptare">
+    <p>Introdu cheia de criptare</p>
+</label>
+<input type="number" name="cheie-criptare" id="cheie-criptare">
 
-    <h2>Rezultat:</h2>
-    <p id="rezultat">dasdadsaadjasfdaskdad</p>
+<button onclick="cripteaza()">Criptează</button>
+
+<h2>Rezultat:</h2>
+<p id="rezultat"></p>
         <script src="script.js"></script>
 
     </div>
